objects/Migrate_Certs__c.object
<CustomObject>
    <description>Staging object to migrate certificates</description>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <label>Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <label>Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audits_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audits Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <label>BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>BR Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BR_Audit__c</fullName>
        <label>BR Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <label>CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <label>CA Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CP/CPS Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_CP__c</fullName>
        <label>Certificate Policy (CP)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Practice_Statement_CPS__c</fullName>
        <label>Certification Practice Statement (CPS)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Revocation__c</fullName>
        <label>Date of Revocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <label>EV Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>EV Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit__c</fullName>
        <label>EV Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results__c</fullName>
        <label>Extraction Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Assertions_By__c</fullName>
        <label>Management Assertions By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_Cert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the cert is processed succesfully MigrateCertsBatch program updates this field</inlineHelpText>
        <label>Migrated Cert</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Migrate Certs</relationshipLabel>
        <relationshipName>Migrate_Certs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrated_Certs_OwnerId__c</fullName>
        <inlineHelpText>Migrated cert is assigned this owner id by MigrateCertsBatch program</inlineHelpText>
        <label>Migrated Certs OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_CA_Owner_Certificate__c</fullName>
        <label>Parent CA Owner/Certificate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Certificate_s_SHA_1_Fingerprint__c</fullName>
        <label>Parent Certificate&apos;s SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Certificate_s_SHA_256_Fingerprint__c</fullName>
        <label>Parent Certificate&apos;s SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Message_Error__c</fullName>
        <inlineHelpText>MigrateCertsBatch program updates this field</inlineHelpText>
        <label>Processing Message/Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <inlineHelpText>MigrateCertsBatch program updates this field</inlineHelpText>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Migration Successful</fullName>
                </value>
                <value>
                    <fullName>Migration Failure</fullName>
                </value>
                <value>
                    <fullName>Migration Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFC_5280_Revocation_Reason_Code__c</fullName>
        <label>RFC 5280 Revocation Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(0) unspecified</fullName>
                </value>
                <value>
                    <fullName>(1) keyCompromise</fullName>
                </value>
                <value>
                    <fullName>(2) cACompromise</fullName>
                </value>
                <value>
                    <fullName>(3) affiliationChanged</fullName>
                </value>
                <value>
                    <fullName>(4) superseded</fullName>
                </value>
                <value>
                    <fullName>(5) cessationOfOperation</fullName>
                </value>
                <value>
                    <fullName>(6) certificateHold</fullName>
                </value>
                <value>
                    <fullName>(8) removeFromCRL</fullName>
                </value>
                <value>
                    <fullName>(9) privilegeWithdrawn</fullName>
                </value>
                <value>
                    <fullName>(10) aACompromise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Status__c</fullName>
        <label>Revocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Revoked</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Added to OneCRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Date__c</fullName>
        <label>Standard Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Type__c</fullName>
        <label>Standard Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ETSI TS 101 456</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Audit__c</fullName>
        <label>Standard Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X_509_Certificate_PEM__c</fullName>
        <label>X.509 Certificate (PEM)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Migrate Cert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_CA_Owner_Certificate__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Processing_Message_Error__c</columns>
        <columns>Migrated_Cert__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Migrate Cert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrate Certs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>